# samba

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  justfile  openapi.json  pyproject.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: build-app.yml  ci.yml  goldens.yml  release.yml
docs/: README.md  about.md  acknowledgements.md  api-reference.md  cli-reference.md  deferred-extraction.md  deployment.md  desktop-app.md  getting-started.md  index.md  known-limitations.md  scenario-reference.md  thermal-components.md
docs/developer/: architecture.md  domain-model.md  results-contract.md
examples/: base_scenario.yaml  commercial_demand_nem.yaml  grid_pv_heat_pump.yaml  grid_pv_heat_pump_dataset.yaml  pv_battery_ev.yaml
examples/content/: cop_ashp_reference.csv  load_residential_8760.csv  weather_sf_2019.csv
packaging/: README.md  samba-server.spec  samba_server_entry.py
samba/: __init__.py  __main__.py  _kpi_contract.py  _pipeline.py  _version.py  input_resolver.py
samba/batteries/: __init__.py  degradation.py  factory.py  kibam.py
samba/compiler/: __init__.py  annualize.py  buses.py  compiler.py  constraints.py
samba/economics/: __init__.py  cashflow.py  emissions.py  npc.py  replacement.py  salvage.py
samba/load_profiles/: __init__.py  ev_presence.py  expander.py  generic.py  templates.py  thermal.py
samba/pareto/: __init__.py  sweep.py
samba/run_result/: __init__.py  contracts.py  kpis.py  reader.py  writer.py
samba/scenario/: __init__.py  loader.py
samba/solver/: __init__.py  _extract_helpers.py  extract.py  runner.py
samba/tariff/: __init__.py  demand.py  endogenous.py  flat.py  gas.py  monthly.py  monthly_tiered.py  resolver.py  seasonal.py  seasonal_tiered.py  service_charge.py  tiered.py  tou.py  ultra_low_tou.py
samba/thermal/: __init__.py  buses.py  constants.py  cop.py  cop_dataset.py  cop_fetch.py  gas_constants.py  hp_catalog.py
samba/weather/: __init__.py  fetch.py  models.py  nsrdb.py  poa.py
samba_cli/: __init__.py  __main__.py  formatting.py  handlers.py  main.py
samba_service/: __init__.py  _contract.py  app.py  auth.py  config.py  jobs.py  models.py  persistent_jobs.py
schemas/: error.schema.json  health.schema.json  job.schema.json  job_submit.schema.json  kpis.schema.json  scenario.schema.json
scripts/: analyze_test_timings.py  build_sidecar.py  capture_v2_goldens.py  capture_v4_goldens.py  check_mpl_headers.py  detect_unicode.py  diag_pv_sweep.py  diag_pv_sweep_out.txt  export_openapi.py  export_schemas.py  gen_logo_assets.py  generate_sample_data.py  normalize_unicode.py  run_test_profiling.ps1  run_test_profiling.sh  sidecar_entry.py  sync_ui_contract.py  verify_sidecar.py
tests/goldens/: __init__.py  conftest.py  test_golden.py  test_v2_goldens.py  test_v3_goldens.py
tests/integration/: test_artifact_contracts.py  test_cli_thermal_resolution.py  test_cop_dataset_example.py  test_data_pipeline.py  test_demand_charge.py  test_dg_milp.py  test_ev_dispatch.py  test_fidelity.py  test_gas_boiler_dispatch.py  test_heat_pump_dispatch.py  test_kibam_dispatch.py  test_pareto.py  test_solve_roundtrip.py  test_thermal_load_dispatch.py  test_thermal_storage_dispatch.py  test_thermal_topology.py  test_tiered_tariff_dispatch.py
tests/unit/: test_battery_factory.py  test_bifacial.py  test_cli.py  test_compiler.py  test_compiler_buses.py  test_contract_determinism.py  test_cop_arrays.py  test_cop_dataset.py  test_cop_fetch.py  test_degradation.py  test_demand_nem.py  test_dg_unit_commitment.py  test_economics.py  test_endogenous_tariff.py  test_ev_component.py  test_ev_presence.py  test_extractor_protocol.py  test_gas_supply_builder.py  test_gas_tariff.py  test_hp_catalog.py  test_kibam_approx.py  test_kpi_contract.py  test_load_profiles.py  test_multiobjective.py  test_openapi_export.py  test_persistent_jobs.py  test_provenance_guard.py  test_run_result.py  test_scenario.py  test_schema_export.py  test_schema_version.py  test_service.py  test_service_v2.py  test_solver.py  test_tariff.py  test_templates.py  test_thermal_bus.py  test_thermal_load_builder.py  test_thermal_load_profile.py  test_thermal_storage.py  (+3 more)
ui/: .npmrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
ui/contract/: dispatch.schema.json  economics.schema.json  manifest.json  openapi.json  (+2 more)
ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  samba_process.rs
working/: ARCHITECTURE_DEBT_REVIEW.md
(+127 files in other folders)
