[package]
name = "ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Kill the bundled backend if the app dies unexpectedly (crash / SIGKILL), which
# the graceful Destroyed/Drop path cannot cover. Linux: PR_SET_PDEATHSIG.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# Windows: a Job Object with KILL_ON_JOB_CLOSE -- when the app process exits the
# OS closes its job handle, taking the backend with it.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",            # SECURITY_ATTRIBUTES (CreateJobObjectW)
    "Win32_System_JobObjects",
    "Win32_System_Threading",    # IO_COUNTERS (JOBOBJECT_EXTENDED_LIMIT_INFORMATION)
] }

